--- a/github/workflow/owasp-zap.yml
+++ b/github/workflow/owasp-zap.yml
@@ -16,4 +16,4 @@ jobs:
           docker_name: 'owasp/zap2docker-stable'
           target: 'http://testphp.vulnweb.com'
           rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a'f
+          cmd_options: '-a'
