--- a/github/workflow/owasp-zap.yml
+++ b/github/workflow/owasp-zap.yml
@@ -1,4 +1,5 @@
 name: owasp zap intigartion with github action
+
 on: [push]
 
 jobs:
@@ -9,11 +10,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          ref: master
+          ref: main
       - name: ZAP Scan
         uses: zaproxy/action-full-scan@v0.4.0
         with:
-          docker_name:'owasp/zap2docker-stable'
-          target:'http://testphp.vulnweb.com'
-          rules_file_name:'.zap/rules.tsv'
-          cmd_options:'-a'
+          docker_name: 'owasp/zap2docker-stable' 
+          target: 'http://testphp.vulnweb.com'
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
